--- a/Day 1/index.html
+++ b/Day 1/index.html
@@ -108,7 +108,9 @@
         <source src="https://videos.pexels.com/video-files/3195394/3195394-sd_640_360_25fps.mp4" >
     </video>
 
-    <del>sfhdsuijfh</del>
+    <del>sfhdsuijfh</del><ins>5674</ins>
+
+    
 
 </body>
 
