--- a/Day 3/css/morecss/index.html
+++ b/Day 3/css/morecss/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- <div class="parent">
+    <div class="parent">
         absolute 1
     </div>
     <div class="parent2">
@@ -18,9 +18,9 @@
     </div>
     <div class="parent4">
         fixed 4
-    </div> -->
+    </div>
 
-    
+<!--     
     <section class="b1">
         <h1>First heading</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates soluta porro praesentium, fuga fugit aliquam, alias a deserunt ea natus, delectus eum explicabo enim eveniet. Officia voluptas sit iusto nihil molestiae fugit magni at nisi asperiores explicabo commodi ipsum, minus vero! Eum sapiente sequi accusantium eius adipisci, recusandae, quas architecto dolorem rem error maiores repellat nemo unde? Illum, blanditiis. Ex impedit delectus ullam vitae ad. Veniam maiores animi inventore id nisi repudiandae, tempore nam perferendis aspernatur possimus libero quo consectetur pariatur in eos, cupiditate, asperiores culpa eius non. Optio quaerat velit iste voluptates eveniet, necessitatibus fugit dignissimos ullam cumque ipsum?</p>
@@ -40,6 +40,6 @@
         <h1>Fourth heading</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates soluta porro praesentium, fuga fugit aliquam, alias a deserunt ea natus, delectus eum explicabo enim eveniet. Officia voluptas sit iusto nihil molestiae fugit magni at nisi asperiores explicabo commodi ipsum, minus vero! Eum sapiente sequi accusantium eius adipisci, recusandae, quas architecto dolorem rem error maiores repellat nemo unde? Illum, blanditiis. Ex impedit delectus ullam vitae ad. Veniam maiores animi inventore id nisi repudiandae, tempore nam perferendis aspernatur possimus libero quo consectetur pariatur in eos, cupiditate, asperiores culpa eius non. Optio quaerat velit iste voluptates eveniet, necessitatibus fugit dignissimos ullam cumque ipsum?</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates soluta porro praesentium, fuga fugit aliquam, alias a deserunt ea natus, delectus eum explicabo enim eveniet. Officia voluptas sit iusto nihil molestiae fugit magni at nisi asperiores explicabo commodi ipsum, minus vero! Eum sapiente sequi accusantium eius adipisci, recusandae, quas architecto dolorem rem error maiores repellat nemo unde? Illum, blanditiis. Ex impedit delectus ullam vitae ad. Veniam maiores animi inventore id nisi repudiandae, tempore nam perferendis aspernatur possimus libero quo consectetur pariatur in eos, cupiditate, asperiores culpa eius non. Optio quaerat velit iste voluptates eveniet, necessitatibus fugit dignissimos ullam cumque ipsum?</p>
-    </section>
+    </section> -->
 </body>
 </html>
